Created blank partials for future functionality and links to thoes partials on the main app

--- a/partials/song-list.html
+++ b/partials/song-list.html
@@ -1,1 +1,9 @@
 <h1>Song List Partial</h1>
+
+list all the songs in the database
+
+or maybe first 5
+
+
+SONG NAME
+arist name - album name- genre??
