Added inputs to add song partial.  Updated factory to get song list from firebase.

--- a/partials/addMusic.html
+++ b/partials/addMusic.html
@@ -1,9 +1,8 @@
 <h1>Add Song Partial</h1>
 
-song name
-
-artist
-
-album
-
-submit button
+<form>
+  Song Name <input type="text" name="song-name"><br>
+  Artist Name <input type="text" name="artist-name"><br>
+  Album Name <input type="text" name="album-name"><br>
+  <input type="submit" value="Add Song" name="">
+</form>
