Users can now add a new song to the firebase database

--- a/partials/addMusic.html
+++ b/partials/addMusic.html
@@ -1,8 +1,8 @@
 <h1>Add Song Partial</h1>
 
-<form>
-  Song Name <input type="text" name="song-name"><br>
-  Artist Name <input type="text" name="artist-name"><br>
-  Album Name <input type="text" name="album-name"><br>
+<form ng-submit="addSong()">
+  Song Name <input ng-model="songName" type="text" name="song-name"><br>
+  Artist Name <input ng-model="artistName" type="text" name="artist-name"><br>
+  Album Name <input ng-model="albumName" type="text" name="album-name"><br>
   <input type="submit" value="Add Song" name="">
 </form>
