Displayed songs from firebase on song list partial

--- a/partials/addMusic.html
+++ b/partials/addMusic.html
@@ -1,4 +1,4 @@
-<h1>Add Song Partial</h1>
+<h1>Add new song</h1>
 
 <form ng-submit="addSong()">
   Song Name <input ng-model="songName" type="text" name="song-name"><br>
